<resources>
    <string name="app_name">Citra Emulator</string>
    <string name="controller_0">GameCube Controller 1</string>
    <string name="controller_1">GameCube Controller 2</string>
    <string name="controller_2">GameCube Controller 3</string>
    <string name="controller_3">GameCube Controller 4</string>
    <string name="controller_control">Control Stick</string>
    <string name="controller_c">C Stick</string>
    <string name="controller_trig">Triggers</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="modifier_range">Modifier Range</string>
    <string name="analog_radius">Analog Radius (High value = High sensitivity)</string>
    <string name="analog_threshold">Analog Threshold (Low value = High sensitivity)</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_descrip">Press or move an input to bind it to %1$s.</string>
    <string name="generic_buttons">Buttons</string>
    <string name="generic_up">Up</string>
    <string name="generic_down">Down</string>
    <string name="generic_left">Left</string>
    <string name="generic_right">Right</string>
    <string name="generic_forward">Forward</string>
    <string name="generic_backward">Backward</string>
    <string name="generic_stick">Stick</string>
    <string name="generic_green">Green</string>
    <string name="generic_red">Red</string>
    <string name="generic_yellow">Yellow</string>
    <string name="generic_blue">Blue</string>
    <string name="generic_orange">Orange</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_start">START</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="trigger_left">L</string>
    <string name="trigger_right">R</string>
    <string name="nunchuk_button_c">C</string>
    <string name="classic_button_zl">ZL</string>
    <string name="classic_button_zr">ZR</string>
    <string name="classic_leftstick">Left Stick</string>
    <string name="classic_rightstick">Right Stick</string>
    <string name="guitar_frets">Frets</string>
    <string name="guitar_strum">Strum</string>
    <string name="guitar_whammy">Whammy</string>
    <string name="guitar_whammy_bar">Bar</string>
    <string name="drums_pads">Pads</string>
    <string name="drums_pad_bass">Bass</string>
    <string name="turntable_button_green_left">Green Left</string>
    <string name="turntable_button_red_left">Red Left</string>
    <string name="turntable_button_blue_left">Blue Left</string>
    <string name="turntable_button_green_right">Green Right</string>
    <string name="turntable_button_red_right">Red Right</string>
    <string name="turntable_button_blue_right">Blue Right</string>
    <string name="turntable_button_euphoria">Euphoria</string>
    <string name="turntable_table_left">Table Left</string>
    <string name="turntable_table_right">Table Right</string>
    <string name="turntable_effect">Effect</string>
    <string name="turntable_effect_dial">Dial</string>
    <string name="turntable_crossfade">Crossfade</string>
    <string name="cpu_jit">Enable CPU JIT</string>
    <string name="cpu_core_desc">%s</string>
    <string name="dual_core">Dual Core</string>
    <string name="dual_core_descrip">Split workload to two CPU cores instead of one. Increases speed.</string>
    <string name="overclock_enable">Override Emulated CPU Clock Speed</string>
    <string name="overclock_enable_description">Higher values can make variable-framerate games run at a higher framerate, requiring a powerful device. Lower values make games run at a lower framerate, increasing emulation speed, but reducing the emulated console\'s performance.</string>
    <string name="overclock_title">Emulated CPU Clock Speed</string>
    <string name="overclock_warning">WARNING: Changing this from the default (100%) WILL break games and cause glitches. Please do not report bugs that occur with a non-default clock.</string>
    <string name="init_clock">System clock type</string>
    <string name="init_clock_descrip">Set the simulated 3DS\'s clock to either reflect that of your device or start at a fixed point.</string>
    <string name="init_time">System clock starting time override</string>
    <string name="init_time_descrip">If the System clock type is Fixed, this changes at which Date/Time it starts</string>
    <string name="slot_a_device">GameCube Slot A Device</string>
    <string name="slot_b_device">GameCube Slot B Device</string>
    <string name="audio_stretch">Audio Stretching</string>
    <string name="audio_stretch_description">Stretches audio to reduce stuttering. Increases latency.</string>
    <string name="region">Emulated region</string>
    <string name="video_backend">Video Backend</string>
    <string name="video_backend_descrip">Select the API used for graphics rendering.</string>
    <string name="show_fps">Show FPS</string>
    <string name="show_fps_descrip">Show the number of frames rendered per second as a measure of emulation speed.</string>
    <string name="vsync">Enable V-Sync</string>
    <string name="hw_renderer">Enable hardware renderer</string>
    <string name="hw_shaders">Enable hardware shader</string>
    <string name="use_shader_jit">Enable JIT compiler for shaders</string>
    <string name="hw_shaders_descrip">Use hardware to emulate 3DS shaders</string>
    <string name="shaders_accurate_mul">Enable accurate multiplication in hardware shaders</string>
    <string name="shaders_accurate_gs">Enable accurate geometric shaders in hardware shaders</string>
    <string name="enhancements">Enhancements</string>
    <string name="internal_resolution">Internal Resolution</string>
    <string name="internal_resolution_descrip">Specifies the resolution used to render at. A high resolution will improve visual quality a lot but is also quite heavy on performance and might cause glitches in certain games. Use zero(0) for auto scaling</string>
    <string name="FSAA">Full-scene Anti-aliasing</string>
    <string name="FSAA_descrip">Reduces the amount of aliasing caused by rasterizing 3D graphics. This makes the rendered picture look less blocky. Heavily decreases emulation speed and sometimes causes issues.</string>
    <string name="anisotropic_filtering">Anisotropic Filtering</string>
    <string name="anisotropic_filtering_descrip">Enhances visual quality of textures that are at oblique viewing angles. Might cause issues in a small number of games.</string>
    <string name="postprocessing_shader">Post Processing Shader</string>
    <string name="postprocessing_shader_descrip">Apply a post-processing effect after finishing a frame.</string>
    <string name="scaled_efb_copy">Scaled EFB Copy</string>
    <string name="scaled_efb_copy_descrip">Greatly increases quality of textures generated using render to texture effects. Raising the internal resolution will improve the effect of this setting. Slightly decreases performance and possibly causes issues (although unlikely).</string>
    <string name="per_pixel_lighting">Per-Pixel Lighting</string>
    <string name="per_pixel_lighting_descrip">Calculate lighting of 3D graphics per-pixel rather than per vertex. Decreases emulation speed by some percent (depending on your GPU). This usually is a safe enhancement, but might cause issues sometimes.</string>
    <string name="force_texture_filtering">Force Texture Filtering</string>
    <string name="force_texture_filtering_descrip">Force texture filtering even if the emulated game explicitly disabled it. Improves texture quality slightly but causes glitches in some games.</string>
    <string name="disable_fog">Disable Fog</string>
    <string name="disable_fog_descrip">Makes distant objects more visible by removing fog, thus increasing the overall detail. Disabling fog will break some games which rely on proper fog emulation.</string>
    <string name="disable_copy_filter">Disable Copy Filter</string>
    <string name="disable_copy_filter_descrip">Disables the blending of adjacent rows when copying the EFB. This is known in some games as \"deflickering\" or \"smoothing\". Disabling the filter is usually safe, and may result in a sharper image.</string>
    <string name="stereoscopy">Stereoscopy</string>
    <string name="stereoscopy_descrip">Stereoscopy allows you to get a better feeling of depth if you have the necessary hardware.\nHeavily decreases emulation speed and sometimes causes issues</string>
    <string name="stereoscopy_mode">Stereoscopy Mode</string>
    <string name="stereoscopy_mode_descrip">Select the stereoscopic 3D mode.</string>
    <string name="sterescopy_depth">Depth</string>
    <string name="sterescopy_depth_descrip">Control the distance between the virtual cameras.\nA higher value creates a stronger feeling of depth while a lower value is more comfortable.</string>
    <string name="sterescopy_convergence">Convergence</string>
    <string name="sterescopy_convergence_descrip">Control the distance of the convergence plane, this is the distance at which objects will appear to be in front of the screen.\nA higher value creates stronger out-of-screen effects while a lower value is more comfortable.</string>
    <string name="sterescopy_swap_eyes">Swap Eyes</string>
    <string name="sterescopy_swap_eyes_descrip">Swap the left and right eye, mostly useful if you want to view side-by-side cross-eyed.</string>
    <string name="hacks">Hacks</string>
    <string name="embedded_frame_buffer">Embedded Frame Buffer</string>
    <string name="skip_efb_access">Skip EFB Access from CPU</string>
    <string name="skip_efb_access_descrip">Ignore any requests from the CPU to read/write to the EFB.</string>
    <string name="ignore_format_changes">Ignore Format Changes</string>
    <string name="ignore_format_changes_descrip">Ignore any changes to the EFB format.</string>
    <string name="efb_copy_method">Store EFB Copies to Texture Only</string>
    <string name="efb_copy_method_descrip">Stores EFB Copies exclusively on the GPU, bypassing system memory. Causes graphical defects in a small number of games. If unsure, leave this checked.</string>
    <string name="texture_cache">Texture Cache</string>
    <string name="texture_cache_accuracy">Texture Cache Accuracy</string>
    <string name="texture_cache_accuracy_descrip">The safer the selection, the less likely the emulator will be missing any texture updates from RAM.</string>
    <string name="gpu_texture_decoding">GPU Texture Decoding</string>
    <string name="gpu_texture_decoding_descrip">Decodes textures on the GPU using compute shaders where supported. May improve performance in some scenarios.</string>
    <string name="external_frame_buffer">External Frame Buffer</string>
    <string name="xfb_copy_method">Store XFB Copies to Texture Only</string>
    <string name="xfb_copy_method_descrip">Stores XFB Copies exclusively on the GPU, bypassing system memory. Causes graphical defects in a small number of games that need to readback from memory. If unsure, leave this checked.</string>
    <string name="immediate_xfb">Immediately Present XFB</string>
    <string name="emulation_toggle_perf_stats">Toggle Perf Stats</string>
    <string name="emulation_configure_controls">Configure Controls</string>
    <string name="emulation_edit_layout">Edit Layout</string>
    <string name="emulation_toggle_controls">Toggle Controls</string>
    <string name="emulation_control_scale">Adjust Scale</string>
    <string name="emulation_switch_screen_layout">Switch Screen Layout</string>
    <string name="emulation_swap_screens">Swap Screens</string>
    <string name="emulation_touch_overlay_reset">Reset Overlay</string>
</resources>