<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="org.citra.citra_android.activities.EmulationActivity">

    <item
        android:id="@+id/menu_emulation_configure_controls"
        android:title="@string/emulation_configure_controls">
        <menu>
            <item
                android:id="@+id/menu_emulation_edit_layout"
                android:title="@string/emulation_edit_layout"/>

            <item
                android:id="@+id/menu_emulation_toggle_controls"
                android:title="@string/emulation_toggle_controls"/>

            <item
                android:id="@+id/menu_emulation_adjust_scale"
                android:title="@string/emulation_control_scale"/>

            <item
                android:id="@+id/menu_emulation_reset_overlay"
                android:title="@string/emulation_touch_overlay_reset"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_emulation_toggle_perf_stats"
        app:showAsAction="never"
        android:title="@string/emulation_toggle_perf_stats"/>

    <item
        android:id="@+id/menu_emulation_switch_screen_layout"
        app:showAsAction="never"
        android:title="@string/emulation_switch_screen_layout"/>

    <item
        android:id="@+id/menu_emulation_swap_screens"
        app:showAsAction="never"
        android:title="@string/emulation_swap_screens"/>

</menu>